--- a/src/app/terminal/terminal.css
+++ b/src/app/terminal/terminal.css
@@ -11,6 +11,8 @@
 
 .message-container {
     margin-bottom: 10px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .prompt {
@@ -20,7 +22,10 @@
 }
 
 .user-input-container {
-    display: inline-flex;
+    display: flex;
+    width: 100%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .user-input {
@@ -31,6 +36,8 @@
     outline: none;
     font-family: inherit;
     font-size: inherit;
+    resize: none;
+    overflow: hidden;
 }
 
 .user-message {
