--- a/src/app/terminal/terminal.css
+++ b/src/app/terminal/terminal.css
@@ -5,7 +5,7 @@
     font-family: 'Courier New', Courier, monospace;
     padding: 20px;
     border-radius: 5px;
-    height: 400px;
+    height: 100%;
     overflow-y: auto;
 }
 
